# authentication-system

./: .gitignore  Dockerfile  build.sh  docker-compose-deploy.yml  docker-compose.yml  makefile  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: workflow.yml
Authentication/: asgi.py  settings.py  urls.py  wsgi.py
Authentication/settings/: base.py  deploy.py  dev.py
api/: serializers.py  urls.py  views.py
auths/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
auths/migrations/: 0001_initial.py  0002_alter_cususer_role.py  0003_todo.py  0004_todo_complete_date.py  0005_alter_todo_complete_date.py  0006_alter_todo_options_alter_todo_complete_date.py  0007_rename_content_todo_description.py  0008_todo_updated_at.py  0009_alter_cususer_role.py  0010_alter_cususer_role.py
auths/templates/: home.html
auths/templates/Todo/: create_todo.html  delete_todo.html  update_todo.html
auths/templates/auth/: base.html  home.html  login.html  logout.html  nav.html  register.html  script.html
auths/tests/: tests.py
consumer/: api_consumer.py
