[project]
name = "authentication"
version = "0.1.0"
description = ""
authors = [
    {name = "Dark-Code404",email = "luiyunish@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref (==3.8.1)",
    "certifi (==2025.1.31)",
    "charset-normalizer (==3.4.1)",
    "crispy-bootstrap5 (==2024.10)",
    "django (==5.1.6)",
    "django-crispy-forms (==2.3)",
    "djangorestframework (==3.15.2)",
    "idna (==3.10)",
    "iniconfig (==2.0.0)",
    "packaging (==24.2)",
    "parameterized (==0.9.0)",
    "pluggy (==1.5.0)",
    "pytest (==8.3.4)",
    "pytest-django (==4.10.0)",
    "python-decouple (==3.8)",
    "python-dotenv (==1.0.1)",
    "requests (==2.32.3)",
    "sqlparse (==0.5.3)",
    "urllib3 (==2.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
